Make the default, boring theme send a utf-8 Content-Type for my sanity

--- a/theme.html
+++ b/theme.html
@@ -3,6 +3,8 @@
         <title>{Title}</title>
         <link rel="shortcut icon" href="{Favicon}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
+
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     </head>
     <body>
         <h1>{Title}</h1>
