--- a/index.html
+++ b/index.html
@@ -74,5 +74,8 @@
     var pageTracker = _gat._getTracker("UA-7398688-4");
     pageTracker._trackPageview();
     } catch(err) {}</script>
+    
+    <!-- Mint -->
+    <script src="http://bencochran.com/mint/?js" type="text/javascript"></script>
   </body>
 </html>
