--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="http://bencochran.com/stylesheets/reset.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="http://bencochran.com/stylesheets/screen.css" type="text/css" media="screen" charset="utf-8" />
 
+    <script src="http://bencochran.com/javascripts/tracking.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://bencochran.com/javascripts/modernizr.js" type="text/javascript" charset="utf-8"></script>
     <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     <!--[if lt IE 7]><script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE7.js" type="text/javascript"></script><![endif]-->
@@ -73,6 +74,7 @@
     try {
     var pageTracker = _gat._getTracker("UA-7398688-4");
     pageTracker._trackPageview();
+    analyticsCallback();
     } catch(err) {}</script>
     
     <!-- Mint -->
