--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="http://bencochran.com/stylesheets/reset.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="http://bencochran.com/stylesheets/screen.css" type="text/css" media="screen" charset="utf-8" />
 
+    <script src="http://bencochran.com/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://bencochran.com/javascripts/tracking.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://bencochran.com/javascripts/modernizr.js" type="text/javascript" charset="utf-8"></script>
     <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
