Changed my github username against my better judgement.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           
           <h3>Download, source, and more information</h3>
           
-          <p>Rendr is hosted on <a href="http://github.com/bcochran/Rendr">GitHub</a> so it’s easy to peek
+          <p>Rendr is hosted on <a href="http://github.com/bencochran/Rendr">GitHub</a> so it’s easy to peek
             at the source. The project page also contains more information about what Rendr can’t do.
             So you should go take a look.</p>
         </section>
