--- a/index.html
+++ b/index.html
@@ -68,15 +68,19 @@
     
     <!-- Google Analytics -->
     <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-7398688-1']);
+      _gaq.push(['_setDomainName', '.bencochran.com']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
     </script>
-    <script type="text/javascript">
-    try {
-    var pageTracker = _gat._getTracker("UA-7398688-4");
-    pageTracker._trackPageview();
-    analyticsCallback();
-    } catch(err) {}</script>
     
     <!-- Mint -->
     <script src="http://bencochran.com/mint/?js" type="text/javascript"></script>
